--- a/Posetrix.Avalonia/App.axaml
+++ b/Posetrix.Avalonia/App.axaml
@@ -9,8 +9,8 @@
         <local:ViewLocator />
     </Application.DataTemplates>
     <Application.Resources>
-        <FontFamily x:Key="CustomTextFont">avares://Posetrix.Avalonia/Assets/Fonts#Ubuntu</FontFamily>
         <FontFamily x:Key="CustomIconsFont">avares://Posetrix.Avalonia/Assets/Fonts#Phosphor</FontFamily>
+        <FontFamily x:Key="InterFont">fonts:Inter#Inter</FontFamily>
     </Application.Resources>
     <Application.Styles>
         <FluentTheme>
