--- a/Posetrix.Avalonia/Views/FolderAddView.axaml
+++ b/Posetrix.Avalonia/Views/FolderAddView.axaml
@@ -11,7 +11,7 @@
         Height="400"
         MinWidth="600"
         MinHeight="400"
-        x:Class="Posetrix.Avalonia.Views.FolderAddWindow"
+        x:Class="Posetrix.Avalonia.Views.FolderAddView"
         x:DataType="viewModels:MainViewModel">
     <Window.Styles>
         <Style Selector="TextBlock.list">
