--- a/Posetrix.Avalonia/Views/PredefinedIntervalsView.axaml
+++ b/Posetrix.Avalonia/Views/PredefinedIntervalsView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Posetrix.Avalonia.Controls.PredefinedIntervalsControl">
+             x:Class="Posetrix.Avalonia.Views.PredefinedIntervalsView">
     <Grid ColumnDefinitions="*,*,*,*,*,*">
         <ToggleButton
             Grid.Column="0"
