--- a/Posetrix.Avalonia/Views/SettingsView.axaml
+++ b/Posetrix.Avalonia/Views/SettingsView.axaml
@@ -5,7 +5,7 @@
         xmlns:vm="using:Posetrix.Core.ViewModels"
         xmlns:viewModels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
         mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="400"
-        x:Class="Posetrix.Avalonia.Views.SettingsWindow"
+        x:Class="Posetrix.Avalonia.Views.SettingsView"
         Width="480"
         Height="400"
         Icon="/Assets/avalonia-logo.ico"
