--- a/Posetrix.Avalonia/Views/CustomIntervalView.axaml
+++ b/Posetrix.Avalonia/Views/CustomIntervalView.axaml
@@ -2,22 +2,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="using:Posetrix.Core.ViewModels"
              mc:Ignorable="d"
-             x:Class="Posetrix.Avalonia.Views.CustomIntervalView">
+             x:Class="Posetrix.Avalonia.Views.CustomIntervalView"
+             x:DataType="vm:CustomIntervalViewModel">
     <Grid ColumnDefinitions="*,*,*">
         <TextBox
             Grid.Column="0"
             Height="30"
             Margin="0,0,10,0"
-            Text="Hours" />
+            Text="{Binding SessionTimer.Hours}" />
         <TextBox
             Grid.Column="1"
             Height="30"
             Margin="0,0,10,0"
-            Text="Minutes" />
+            Text="{Binding SessionTimer.Minutes}" />
         <TextBox
             Grid.Column="2"
             Height="30"
-            Text="Seconds" />
+            Text="{Binding SessionTimer.Seconds}" />
     </Grid>
 </UserControl>
