--- a/Posetrix/Views/CustomInterval.xaml
+++ b/Posetrix/Views/CustomInterval.xaml
@@ -1,13 +1,14 @@
 ﻿<UserControl
-    x:Class="Posetrix.Views.UserControls.CustomInterval"
+    x:Class="Posetrix.Views.CustomInterval"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Posetrix.Views.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=viewmodels:CustomIntervalViewModel}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
